# civil-complaint-resolver

./: .gitignore  CivicFix_Architecture.odt  README.md  UI_App.py  civil_complaint_resolver.py  complaint_vector_db.py  pyproject.toml  requirements.txt
data/: model_pe_test.csv  test.csv  train.csv  val.csv
prompts/: prompt1.txt  prompt2.txt  prompt_rag.txt
src/civic_redressal/: __init__.py  config.py  main.py
src/civic_redressal/agents/analytics/: agent.py
src/civic_redressal/agents/caption/: agent.py  prompt.py
src/civic_redressal/agents/closure/: agent.py
src/civic_redressal/agents/ingestion/: agent.py
src/civic_redressal/agents/intake/: agent.py  prompt.py
src/civic_redressal/agents/llm/: agent.py
src/civic_redressal/agents/registration/: agent.py
src/civic_redressal/agents/retrieval/: __init__.py  agent.py  prompt.py
src/civic_redressal/agents/routing/: agent.py
src/civic_redressal/agents/storage/: agent.py
src/civic_redressal/cli/: __main__.py  app.py
src/civic_redressal/db/: json_db.py
src/civic_redressal/retrieval/: complaint_repository.py  documents.py  embeddings.py  vectorstore.py
src/civic_redressal/scripts/: extract_categories.py  inspect_vector_db.py  run_model_predictions.py  split_data.py
src/civic_redressal/services/: complaint_service.py
src/civic_redressal/utils/: constants.py  util.py
src/civic_redressal/web/: app.py  routes.py
src/civic_redressal/workflow/: graphs.py  nodes.py  state.py  util.py
templates/: analytics.html  index.html  upload_incoming.html  upload_resolved.html
