[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civic-redressal"
version = "0.1.0"
dependencies = [
    "Flask==2.3.3"
    "langchain==0.1.0"
    "langchain-core==0.1.7"
    "langchain-chroma==0.1.0"
    "langchain-ollama==0.1.0"
    "chromadb==0.4.18"
    "Pillow==10.0.1"
    "imagehash==4.3.1"
    "requests==2.31.0"
    "werkzeug==2.3.7"
    "python-dotenv==1.0.0"
    "pandas>=1.3.0"
    "scikit-learn>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
civifix-cli = "civic_redressal.cli.app:main"